resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix
  namespace: matrix
  labels:
    app: matrix
spec:
  selector:
    matchLabels:
      app: matrix
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: matrix
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse:v1.127.1
          ports:
            - containerPort: 8008
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 500m
              memory: "512Mi"
            limits:
              cpu: 2
              memory: "2Gi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: matrix-data
      restartPolicy: Always
